v0.0.4:
- Float-Validierung akzeptiert nur noch Werte mit optionalem Vorzeichen und exakt einem Dezimalpunkt; Dezimalkomma-Eingaben fallen zuverlässig auf den dokumentierten Vref-Fallback zurück und werden inklusive Log-Meldung getestet.
- Device-Zeile der `dbus-adc.conf` wird dynamisch aus der Vorlage übernommen und kann per `EXPANDERPI_DEVICE` oder gespeicherter Benutzerkonfiguration überschrieben werden; Standard bleibt `iio:device0`.
- Installer persistiert die ausgewählte IIO-Gerätenummer in `dbus-adc.user.conf` und setzt sie beim nächsten Lauf wieder als Basiswert.
- Regressionstest prüft die Übernahme einer Vorlage mit `device iio:device1`.
- README um das neue Override-Verhalten erweitert.
- Versionsdatei und Change-Log auf den ausgelieferten Stand v0.0.4 validiert.
- ReadMe führt die unterstützten Raspberry-Pi-Modelle 2/3/4 konsistent zum Setup und zur README auf.

v0.0.3:
- Veraltetes `ds1307-rtc.dtbo` aus den ausgelieferten Overlays entfernt und den Setup-Prozess auf das generische `i2c-rtc`-Overlay mit `ds1307`-Parameter umgestellt.
- rc.local wird nur noch für den `hwclock -s` Aufruf angepasst; die DS1307-Anlage via `/sys/.../new_device` entfällt zugunsten des i2c-rtc-Overlays.
- Legacy-Installationen werden beim Update automatisch von alten rc.local-Einträgen und Markern bereinigt.
- Dokumentation und Change-Log aktualisiert, um die Umstellung auf das generische `i2c-rtc`-Overlay sowie die rc.local-Bereinigung nachvollziehbar zu machen; die ursprünglich als v0.0.4 vorgesehenen Nacharbeiten wurden in diesen Stand integriert.

v0.0.2:
- Device-Tree-Overlay-Eintrag auf die Komma-Schreibweise `dtoverlay=mcp3208,spi0-0-present` aktualisiert, damit der Overlay-Loader die boolesche Option korrekt setzt.
- Dokumentation ergänzt, wie sich die erfolgreiche Aktivierung des MCP3208-Overlays direkt auf dem Gerät prüfen lässt.

v0.0.1:
- Neues kompaktes ReadMe mit Paketbeschreibung angelegt.